--- a/presscore-lite/style.css
+++ b/presscore-lite/style.css
@@ -513,7 +513,8 @@ a#slider_close_button{float:right}
 #cat-list .border{background:none repeat scroll 0 0 #000000;height:3px;width:100%}
 #cat-list .cat-list-item{float:left;height:285px;overflow:hidden;padding:0 20px 20px;text-align:left;width:439px}
 #cat-list h3{background:none repeat scroll 0 0 #000000;color:#FFFFFF;font-size:14px;font-weight:700;height:30px;letter-spacing:2px;line-height:30px;margin-bottom:10px;text-align:center;width:80px}
-.live-list li a{display:block;float:left;height:32px;line-height:32px;padding:0;position:relative;width:430px}
+.live-list li a{display:block;float:left;height:32px;line-height:32px;padding:0;position:relative;width:430px;text-overflow: ellipsis;
+    white-space: nowrap;overflow:hidden}
 .live-list li a:hover{background:none repeat scroll 0 0 #D14836;color:#FFFFFF;padding-left:10px}
 #cat-list .live-list li a span{color:#666666;font-size:12px;height:28px;overflow:hidden;position:absolute;right:0;text-align:right;top:0}
 #cat-list .live-list li a:hover span{color:#fff}
